src/test/deca/syntax/invalid/sansobjet/MissingBracketWhile.deca
// 
// Description: test soustraction incorrecte
// Resultat: erreur ligne 4: il manque une parenthere
{

    while(1)

    }
    
}
